--- a/src/components/button/styles.module.css
+++ b/src/components/button/styles.module.css
@@ -9,11 +9,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 4px 4px 0px #00000026;
   border: 1px solid #00000054;
   border-radius: 5px;
   background-color: #fff;
   transition: all 0.3s linear;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .button:hover {
@@ -32,8 +35,9 @@
 .button.auth {
   font-size: 16px;
   padding: 16px 20px;
+  box-shadow: 0px 4px 4px 0px #00000026;
 }
 
 .button.green.auth {
-  background-color: #C5F4E1;
+  background-color: #c5f4e1;
 }
