--- a/src/pages/adminPanel/components/tabs/generalInfo/restaurantInfo/styles.module.css
+++ b/src/pages/adminPanel/components/tabs/generalInfo/restaurantInfo/styles.module.css
@@ -10,4 +10,15 @@
   flex-grow: 1;
   gap: 11px;
   margin-bottom: 50px;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s linear;
+}
+
+.inner.active {
+  height: max-content;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s linear 0.3s;
 }
