--- a/src/components/input/styles.css
+++ b/src/components/input/styles.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 100%;
   gap: 8px;
+  position: relative;
 }
 
 .labelText {
@@ -44,4 +45,16 @@
 
 .input.error {
   border-color: #fb0505b2;
+}
+
+.password {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
 }
