--- a/src/components/input/styles.css
+++ b/src/components/input/styles.css
@@ -49,10 +49,11 @@
 
 .password {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 50px;
-  height: 50px;
+  bottom: 1px;
+  right: 1px;
+  width: 49px;
+  height: 49px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
