--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@ section {
   display: block;
 }
 
-button, input {
+button,
+input {
   border: none;
   outline: none;
   background-color: transparent;
@@ -68,13 +69,20 @@ table {
   border-spacing: 0;
 }
 
+#root {
+  max-height: max-content;
+  overflow: hidden;
+}
+
 .page-template {
   width: 100%;
   max-width: 100vw;
+  height: 100%;
   min-height: 100vh;
+  max-height: max-content;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .container {
@@ -109,4 +117,6 @@ table {
 
 .info {
   padding: 23px 34px 23px 20px;
+  display: flex;
+  flex-direction: column;
 }
