--- a/src/pages/adminPanel/components/tabs/generalInfo/languageBlock/styles.module.css
+++ b/src/pages/adminPanel/components/tabs/generalInfo/languageBlock/styles.module.css
@@ -69,6 +69,7 @@ div.language {
 .select {
   width: 70%;
   height: 30px;
+  padding: 3px 10px;
   border: 1px solid #00000054;
   box-shadow: none;
 }
