--- a/src/pages/adminPanel/components/tabs/generalInfo/socialBlock/styles.module.css
+++ b/src/pages/adminPanel/components/tabs/generalInfo/socialBlock/styles.module.css
@@ -1,6 +1,8 @@
 .block {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  width: 69%;
   row-gap: 6px;
 }
 
@@ -8,11 +10,11 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  width: 50%;
+  width: 45%;
 }
 
 .input {
-  width: 70%;
+  width: 100%;
   height: 30px;
   border: 1px solid #00000054;
   box-shadow: none;
