--- a/src/pages/adminPanel/styles.module.css
+++ b/src/pages/adminPanel/styles.module.css
@@ -18,3 +18,22 @@
   width: 100%;
   height: 100%;
 }
+
+.help {
+  width: max-content;
+  min-width: 104px;
+  height: 33px;
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #000;
+  font-family: Inter, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+  position: fixed;
+  right: 11px;
+  bottom: 20px;
+  border-radius: 20px;
+}
